--- a/styles/custom-icons.css
+++ b/styles/custom-icons.css
@@ -63,13 +63,14 @@
 .fa-instagram::before { content: "\f16d"; }
 .fa-facebook-f::before { content: "\f39e"; }
 
-/* 載入字體檔案 - 只載入需要的字體 */
+/* 載入字體檔案 - 使用可靠的CDN連結 */
 @font-face {
     font-family: "Font Awesome 6 Free";
     font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-solid-900.woff2") format("woff2");
+    src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-solid-900.woff2") format("woff2"),
+         url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-solid-900.woff") format("woff");
 }
 
 @font-face {
@@ -77,7 +78,8 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-brands-400.woff2") format("woff2");
+    src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-brands-400.woff2") format("woff2"),
+         url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-brands-400.woff") format("woff");
 }
 
 /* 優化動畫和互動效果 */
